--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
+        <div class="logo">
+            <h2>Header Logo</h2>
+        </div>
+        <div class="menu-right">
+            <ul>
+                <a href="#"><li>Header link 1</li></a>
+                <a href="#"><li>Header link 2</li></a>
+                <a href="#"><li>Header link 3</li></a>
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
